# testQtOpengl3.2

./: CMakeLists.txt
src/: main.cpp  threadrenderer.cpp
src/resource/: main.qml
src/shared/: logorenderer.cpp  logorenderer.h
